fix: sidebar padding overflow

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ li>a:hover {
 	}
 	.content {
 		text-align: center;
-		font-size: 120%;
+		font-size: 100%;
 	}
 }
 
